# tgs-to-git-api

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
prisma/: schema.prisma
prisma/migrations/20230208105222_init/: migration.sql
